tests/baselines/reference/parserForOfStatement15.errors.txt
parserForOfStatement15.ts(1,20): error TS2304: Cannot find name 'X'.


==== parserForOfStatement15.ts (1 errors) ====
    for (var [a, b] of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }